# last-epoch-build-optimizer

./: Snapshot.md
.claude/: settings.local.json
LEBOv2/: CLAUDE.md
LEBOv2/.claude/: settings.local.json
LEBOv2/.github/workflows/: release.yml
LEBOv2/.playwright-mcp/: page-2026-04-21T20-39-44-781Z.yml
LEBOv2/_bmad-output/brainstorming/: brainstorming-session-2026-04-28-1.md
LEBOv2/docs/: game-data-source.md  pixi-spike-report.md
LEBOv2/lebo/: package.json  pnpm-lock.yaml  vite.config.ts
LEBOv2/lebo/src-tauri/: Cargo.toml  tauri.conf.json
LEBOv2/lebo/src-tauri/capabilities/: default.json
LEBOv2/lebo/src-tauri/resources/game-data/: manifest.json
LEBOv2/lebo/src-tauri/resources/game-data/classes/: acolyte.json  mage.json  primalist.json  rogue.json  sentinel.json
LEBOv2/lebo/src-tauri/src/: lib.rs  main.rs
LEBOv2/lebo/src-tauri/src/commands/: app_commands.rs  build_commands.rs  claude_commands.rs  game_data_commands.rs  mod.rs
LEBOv2/lebo/src-tauri/src/db/: mod.rs
LEBOv2/lebo/src-tauri/src/models/: build.rs  game_data.rs  mod.rs
LEBOv2/lebo/src-tauri/src/services/: claude_service.rs  connectivity_service.rs  game_data_service.rs  keychain_service.rs  mod.rs  openrouter_service.rs  prompts.rs
_bmad-output/: project-context.md  project-intent.md
_bmad-output/planning-artifacts/: PRD.md  architecture.md  readiness-check.md  ux-design.md
lebo/: package.json  pnpm-lock.yaml
lebo/.cargo/: config.toml
lebo/scripts/: generate-game-data.mjs
lebo/src/: App.tsx  index.css
lebo/src-tauri/: Cargo.toml  tauri.conf.json
lebo/src/lib/: tauri.ts  (+1 more)
(+441 files in other folders)
