[package]
name = "lebo"
version = "0.1.0"
description = "LEBOv2 — Last Epoch Build Optimizer"
authors = ["Alec"]
edition = "2021"

[lib]
name = "lebo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-http = "2.5.8"
tauri-plugin-updater = "2.10.1"
tauri-plugin-store = "2.4.2"
tauri-plugin-stronghold = "2"
argon2 = { version = "0.5", features = ["std"] }
rusqlite = { version = "0.32", features = ["bundled"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["time"] }

